@@ -11,10 +11,6 @@
     overflow-y: auto;
     background-color: #f7f7f7;
     }
-    body.osx.rounded .page {
-        /* TODO drop this shit after stable Chrome 21 */
-        border-radius: 5px;
-        }
 
 a.nick, a.hash {
     text-shadow: rgba(255, 255, 255, 0.8) 0px 1px 0px;
