@@ -24,16 +24,6 @@ if (navigator.appVersion.indexOf('Mac') >= 0) {
     twic.platform = twic.platforms.OSX;
 
     twic.dom.addClass(document.body, twic.platform);
-
-    // TODO drop this shit after stable Chrome 21
-    var
-        version = navigator.appVersion.match(/Chrome\/(\d+)/);
-
-    if (2 === version.length &&
-        parseInt(version.pop(), 10) < 20
-    ) {
-        twic.dom.addClass(document.body, 'rounded');
-    }
 } else
 if (navigator.appVersion.indexOf('Windows') < 0) {
     twic.platform = twic.platforms.LINUX;
